# visio-rust

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  visio_rust.pyi
.github/workflows/: ci.yml  lint.yml
python/visio_exif/: main.py
src/: lib.rs  main.rs
tests/: test_exif.py  test_icc.py  utils.py
visio_rust/: __init__.py  main.py
