[package]
name = "visio-exif"
version = "0.1.0"
edition = "2021"

[lib]
name = "visio_exif"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]


[dependencies]
kamadak-exif = "0.5.4"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
