[package]
name = "visio-exif"
version = "0.1.0"
edition = "2021"

[lib]
name = "visio_img_meta"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]


[dependencies]
img-parts = "0.2.3"
bytes = "1"
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3

# [package]
# name = "img-parts-image-rs-example"
# version = "0.0.0"
# authors = ["Paolo Barbolini <paolo@paolo565.org>"]
# description = "Example that converts images using the image crate while keeping the original ICCP and EXIF metadata"
# license = "MIT/Apache-2.0"
# repository = "https://github.com/paolobarbolini/img-parts"
# edition = "2018"
# publish = false

# [dependencies]
# # importing the image crate with only jpeg and webp suuport, since this example
# # focuses on formats supported by img-parts. This also makes the builds faster.
# image = { version = "0.23", default-features = false, features = ["jpeg", "png", "webp"] }
# img-parts = "0.2.3"
# bytes = "1"

# [profile.dev]
# # just making the example run a bit faster
# opt-level = 2