[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "visio_rust"
description = "Rust plugin for python exif and icc profile manipulation"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
requires-python = ">=3.7"
dependencies = []
maintainers = [
    { name = "Anderson Cançado", email = "anderson.cancado@gaspardbruno.com" },
    { name = "Marco João", email = "marco.joao@gaspardbruno.com" },
]

[project.urls]
homepage = "https://github.com/Gaspard-Bruno/visio-rust"
source = "https://github.com/Gaspard-Bruno/visio-rust"
tracker = "https://github.com/Gaspard-Bruno/visio-rust/issues"
