[metadata]
name = visio_rust
version = 0.1.2
license = 
url = https://github.com/Gaspard-Bruno/visio-exif
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Development
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = visio_rust
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.7
include_package_data = True